--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ section h1 {
   color: white;
   font-size: 24px;
   text-align: center;
-  padding: 16px;
+/*   padding: 16px; */
   letter-spacing: 1px;
 }
 
