--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ section h1 {
   text-align: center;
   padding: 16px;
   letter-spacing: 1px;
+  margin-desktop: 0px;
 }
 
 .message-section-spacing {
