--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ a {
 img {
   width: 100%;
 }
-section span {
+/*section span {
   display: block;
   background-color: #081b1a;
   text-align: center;
   color: white;
   padding: 10px;
-}
+}*/
 
 section h1 {
   background-color: #014535;
@@ -53,7 +53,6 @@ section h1 {
   text-align: center;
   padding: 16px;
   letter-spacing: 1px;
-  margin-desktop: 0px;
 }
 
 .message-section-spacing {
