--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ a {
 img {
   width: 100%;
 }
-/*section span {
+section span {
   display: block;
   background-color: #081b1a;
   text-align: center;
   color: white;
   padding: 10px;
-}*/
+}
 
 section h1 {
   background-color: #014535;
