--- a/style.css
+++ b/style.css
@@ -46,17 +46,19 @@ section span {
   padding: 10px;
 }
 
-section h1 {
+h1 {
   background-color: #014535;
   color: white;
   font-size: 24px;
   text-align: center;
   padding: 16px;
   letter-spacing: 1px;
+  margin-top: -5px;
 }
 
 .message-section-spacing {
-  margin-top: -5px;
+  display: flex;
+  flex-direction: column;
 }
 
 .message-section {
@@ -77,6 +79,23 @@ section h1 {
   padding: 15px;
 }
 
+#forms{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#forms section{
+  width: 50%;
+}
+
+.center_line{
+  border-right: 2px solid #555;
+}
+.center_line_left{
+  border-left: 2px solid #555;
+
+}
+
 pre{
   font-family: "Open Sans", sans-serif;
   text-align: left;
@@ -86,6 +105,9 @@ form {
   padding: 2em;
   margin: 2rem auto 0 auto;
   max-width: 600px;
+  grid-template-columns: 1fr 2fr;
+    grid-gap: 16px;
+    align-items: center;
 }
 form input {
   background: white;
@@ -101,8 +123,7 @@ form input {
 }
 form button {
   background: #014535;
-  padding: 0.7em;
-  width: 50%;
+  padding: 15px 30px;
   border: none;
   color: white;
   text-align: center;
@@ -138,19 +159,57 @@ input[type="password"]::placeholder {
   text-align: center;
 }
 
-@media (min-width: 400px) {
-  form {
-    grid-template-columns: 200px 1fr;
-    grid-gap: 16px;
-  }
+label {
+  text-align: right;
+  grid-column: 1 / 2;
+}
 
-  label {
-    text-align: right;
-    grid-column: 1 / 2;
-  }
+input,
+button {
+  grid-column: 2 / 3;
+}
 
-  input,
-  button {
-    grid-column: 2 / 3;
+
+@media (max-width: 500px) {
+  .message-section{
+    display: flex;
+    flex-direction: column;
+  }
+  section span{
+    font-size: 13px;
+  }
+  .message-section div{
+    margin-bottom: 20px;
+  }
+  #forms{
+    display: flex;
+    flex-direction: column;
+  }
+  #forms section{
+    width: 75%;
+  }
+  form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  label{
+    font-size: 14px;
+  }
+  .center_line{
+    border-right: none;
+    border-bottom: 2px solid #555;
+  }
+  .center_line_left{
+    border-left: none;
+    border-top: 2px solid #555;
+  }
+  form button{
+    margin-top: 20px;
+    padding: 0.5em 1.5em;
+    font-size: 14px;
+  }
+  nav ul li{
+    font-size: 13px;
   }
 }
