--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ body {
 }
 
 h3 {
-  background-color: #014535;
-  color: white;
+  color: black;
   font-size: 18px;
   text-align: right;
   padding: 16px;
