--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 h3 {
   color: black;
   font-size: 18px;
-  text-align: right;
+  text-align: left;
   padding: 16px;
   letter-spacing: 1px;
   margin-top: -5px;
